--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
-  <body id="bg-image" class="container-fluid">
+  <body id="bg-image" class="container-fluid position-relative">
     <div class="row d-flex justify-content-end">
       <div class="col-1 text-center" id="weather"></div>
     </div>
 
-    <div class="row m-2">
+    <div class="row">
       <div class="col-4">
         <div>
           A Todo List
@@ -32,17 +32,8 @@
       </div>
     </div>
 
-    <div class="row d-flex justify-content-center m-2">
-      <div class="col-10">
-        <div id="quote">
-          <p>
-            The Quote: Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Obcaecati omnis eligendi sed nihil veniam natus quas laudantium?
-            Earum non veritatis, iste voluptatem deserunt quam accusantium
-            provident quis repellendus nobis vel!
-          </p>
-        </div>
-      </div>
+    <div class="row d-flex justify-content-center">
+      <div class="col-10 position-absolute text-center" id="quote-row"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
