--- a/index.html
+++ b/index.html
@@ -18,41 +18,51 @@
 
   <body class="container-fluid position-relative" id="bg-image">
     <div class="row d-flex justify-content-end">
-      <div class="col-1 text-center" id="weather"></div>
+      <div class="col-1 text-center text-white p-2 m-2" id="weather"></div>
     </div>
 
     <div class="row">
-      <div class="col-4">
-        <div>
-          A Todo List
-          <div id="todo-error"></div>
-          <form onsubmit=""></form>
-          <div id="todos"></div>
+      <div class="col-2">
+        <div id="list">
+          <div id="list-items"></div>
+
+          <form onsubmit="app.todoController.addTodo(event, '${this.id}')">
+            <div class="form-group">
+              <input
+                class="form-control form-control-sm"
+                type="text"
+                placeholder="New to do"
+                name="name"
+              />
+            </div>
+          </form>
         </div>
       </div>
     </div>
 
     <div class="row d-flex justify-content-center">
-      <div class="col-10 position-absolute text-center" id="quote-row"></div>
+      <div
+        class="col-10 position-absolute text-center text-white"
+        id="quote-row"
+      ></div>
     </div>
 
     <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
-    <script type="module" src="app/main.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="app/main.js" type="module"></script>
   </body>
 </html>
-<html></html>
