can add to list

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="list">
           <div id="list-items"></div>
 
-          <form onsubmit="app.todoController.addTodo(event, '${this.id}')">
+          <form onsubmit="app.todoController.addTodo(event)">
             <div class="form-group">
               <input
                 class="form-control form-control-sm"
