delete button on page

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </div>
 
     <div class="row">
-      <div class="col-2">
+      <div class="col-3">
         <div id="list">
-          <div id="list-items"></div>
+          <ol class="text-white" id="list-items"></ol>
 
           <form onsubmit="app.todoController.addTodo(event)">
             <div class="form-group">
